fix justify-evenly on ie11

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -34,3 +34,11 @@
     margin-right: 5px;
   }
 }
+
+.details:before, .detail {
+  margin:0 auto 0 0;
+}
+
+.details:before {
+  content:'';
+}
