--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -91,6 +91,12 @@ body {
   .details .icon {
     margin-right: 5px; }
 
+.details:before, .detail {
+  margin: 0 auto 0 0; }
+
+.details:before {
+  content: ''; }
+
 /* fonts */
 /* padding */
 .main {
